fix(Profile): Fixed username visibility

--- a/src/components/screens/Upload/styles.less
+++ b/src/components/screens/Upload/styles.less
@@ -3,13 +3,6 @@
 .upload {
   padding: 34px 20px 63px;
   text-align: center;
-  img {
-    min-width: 520px;
-    min-height: 284px;
-    width: 520px;
-    height: 284px;
-    border-radius: 43px;
-  }
   .dray-and-drop {
     padding: 89px 0;
     border: 1px dashed @white_50;
@@ -19,6 +12,11 @@
 .cover-image {
   padding: 39px 59px 31px !important;
   text-align: center;
+  img {
+    max-width: 568px;
+    max-height: 259px;
+    border-radius: 43px;
+  }
   .dray-and-drop {
     padding: 56px;
     border: 1px dashed @white_50;
@@ -30,7 +28,7 @@
   padding: 45px 0;
   text-align: center;
   input {
-    width: 670px !important;
+    width: 930px !important;
     background-color: transparent !important;
     &:hover,
     &:focus-visible {
@@ -42,12 +40,6 @@
   }
   .player {
     padding: 24px 0 48px;
-    img {
-      max-width: 922px;
-      max-height: 538px;
-      filter: blur(3px);
-      border-radius: 16px;
-    }
     .remove {
       position: absolute;
       top: 7%;
